--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
   padding-bottom: 2em;
   opacity: 0.94;
   position: absolute;
-  top: 8%;
+  top: 10%;
   left: 7%;
 }
 .box h1 {
@@ -71,66 +71,73 @@ body {
 
 .box p {
   color: #fff;
-  font-size: 1.2em;
+  font-size: 1em;
   line-height: 26px;
-  margin: 0;
-  padding: 0 1em 0em 1em;
-  margin-left: 0.5em;
+  padding: 0.5em;
+  padding-right: 0;
+  margin-left: 1.5em;
   text-transform: capitalize;
-  /* font-weight: bold; */
+  font-weight: 600;
+  background: #e6e63e;
+  width: 230px;
+  border-radius: 5px;
 
 }
-.btn {
+/* .btn {
   padding: 10px 16px;
   display: inline-block;
   text-decoration: none;
   margin-left: 1.8em;
   margin-top: 1em;
   background-color: #e6e63e;
-  color: #fff;
+  color: #f1f1f1;
   cursor: pointer;
   outline: none;
-  font-weight: bold;
+  font-weight: bolder;
   text-transform: capitalize;
   text-align: left;
   border-radius: 1px;
-}
+} */
 .btn:hover {
   opacity: 0.6;
 }
 .card img {
   width: 100%;
-  display: inline-block;
-  height: 530px;
+  max-height: 500px;
   object-fit: cover;
-  background-color: #000;
 }
 
 .card {
   display: grid;
   max-width: 1315px;
   grid-template-columns: 41.5% 58.5%;
-  background: #fff;
-  max-height: 530px;
+  background:white;
+  max-height: 500px;
 }
 .card h2 {
   font-size: 34px;
-  padding: 3.8em 2.5em 0.2em 67px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-bottom: 0.5em;
+  font-family: sans-serif;
 }
 .card p {
   line-height: 26px;
-  padding: 10px 42px 10px 70px;
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: sans-serif;
   font-size: 16px;
+  margin-bottom: 1.5em;
 }
+ .text{
+  margin: auto;
+  margin-left: 2em;
+  padding:0 1em;
+} 
 .learn-more {
-  margin-left: 67px;
-  padding: 8px 16px;
+  display: inline-block;
+  text-decoration: none;
+  padding: 8px 18px;
   border: 2px solid #909090;
   color: #909090;
   background-color: #fff;
-  border-radius: 0;
+  font-weight: bold;
 }
 .card:nth-child(even) {
   grid-template-columns: 58.5% 41.5%;
