--- a/about.css
+++ b/about.css
@@ -19,8 +19,8 @@ body {
   width: 82%;
   margin: auto;
   padding: 2vh;
+  font-family: 'Oswald', sans-serif;
   display: flex;
- 
 }
 .logo {
   width: 100px;
@@ -48,127 +48,43 @@ body {
 .side-nav {
   display: none;
 }
-.showcase {
-  background-image: url(./assets/showcase.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  height: 90vh;
-  top: 0;
-}
-.filter{
-  background-color: rgba(241, 234, 132, 0.116);
-	position: absolute;
-	width: 100%;
-  height: 100%;
-}
 
-.box {
-  height: auto;
-  width: 400px;
-  padding-bottom: 2em;
-  opacity: 0.94;
-  position: absolute;
-  top: 10%;
-  left: 7%;
+.body {
+  padding: 2em 6.5em;
+  line-height: 30px;
+  margin-left: 10%;
+  font-size: 20px;
+  font-weight: 100;
+  color: #414042;
 }
-.direction{
-  position: absolute;
-  color: #fff;
-  top: 80%;
-  right: 10%;
-  cursor: pointer;
+.body h2 {
+  color: #caca1e;
+  padding: 0.5em 0;
+  font-size: 26px;
 }
-.direction p{
-  font-size: 1.3em;
-  font-weight: bold;
-  margin-left: -40%;
+.body p {
+  padding-bottom: 0.5em;
 }
-.bounce{
-    -moz-animation: bounce 2s infinite;
-    -webkit-animation: bounce 2s infinite;
-    animation: bounce 2s infinite;
-}
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-30px);
-  }
-  60% {
-    transform: translateY(-15px);
-  }
-}
-.box h1 {
-  color: #fff;
-  padding: 0.5em 0.5em;
-  font-size: 52px;
-  line-height: 1.3;
-  margin-bottom: 0;
-}
-
-.box p {
-  color: #fff;
-  font-size: 1.2em;
-  line-height: 26px;
-  padding: 0.5em;
-  padding-left: 1.5em;
+.disclaimer {
   text-transform: capitalize;
-  font-weight: 600;
-}
-.btn:hover {
-  opacity: 0.6;
-}
-.card img {
-  width: 100%;
-  max-height: 530px;
-  object-fit: cover;
-}
-.main-container {
-  max-width: 1310px;
-  margin: auto;
-  margin-bottom: -5px;
-}
-.card {
-  display: grid;
-  max-width: 1315px;
-  grid-template-columns: 41.5% 58.5%;
-  /* margin-bottom: 2em; */
-}
-.card h2 {
-  font-size: 34px;
-  margin-bottom: 0.5em;
-}
-.card p {
-  line-height: 26px;
-  font-family: sans-serif;
-  margin-bottom: 1.5em;
-}
-.text {
-  display: inline-block;
-  margin: auto;
-  margin-left: 2.2em;
-  padding: 0 1.5em;
-  font-size: 17px;
-}
-.learn-more {
-  display: inline-block;
-  text-decoration: none;
-  padding: 8px 18px;
-  border: 2px solid #909090;
-  color: #909090;
-  background-color: #fff;
   font-weight: bold;
-  text-transform: uppercase;
 }
-.card:nth-child(even) {
-  grid-template-columns: 58.5% 41.5%;
+.banner {
+  background-image: url('./assets/about.jpg');
+  height: 66vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.card:nth-child(even) div {
-  order: 1;
+.banner p {
+  color: #fff;
+  font-size: 2em;
+  position: relative;
+  top: 80%;
+  left: 9.5%;
+  font-weight: bold;
 }
+
 .footer {
   background: #333;
   /* position: absolute; */
@@ -181,10 +97,10 @@ body {
   display: flex;
   background-color: #333;
   color: #fff;
+  font-size: 0.9em;
   justify-items: center;
   padding-top: 3em;
   padding-bottom: 4em;
-  font-size: 0.93em;
 }
 .fcontainer ul {
   list-style-type: none;
@@ -197,7 +113,6 @@ body {
   color: #fff;
   overflow: hidden;
   line-height: 1.8;
-
 }
 .fcontainer ul li a:hover {
   color: #e6e63e;
@@ -246,7 +161,23 @@ body {
   width: 85%;
   margin: auto;
 }
-/* Media Queries ....................... */
+/* .f-logo{
+  width: 200px;
+  margin: 0;
+  padding: 0;
+} */
+/* .footer-logo{
+  padding: 0;
+  margin: 0;
+  color: #fff;
+  position: relative;
+  bottom: -20px;
+  font-size: 30px;
+  left: -500px;
+  z-index: 1;
+} */
+
+/* Media Query *****************************************/
 @media (max-width: 768px) {
   .line {
     width: 30px;
@@ -300,69 +231,59 @@ body {
     font-size: 30px;
     margin-left: 50px;
   }
-  .showcase{
-    height: 354px;
+  .body {
+    padding: 1em 1.2em;
+    margin: auto;
+
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: 100;
+    color: #414042;
   }
-  .showcase img {
+  .body h2 {
+    color: #caca1e;
+    padding: 0.5em 0;
+    font-size: 26px;
+  }
+  .body p {
+    padding-bottom: 0.5em;
+  }
+  .footer{
+    position: absolute;
     width: 100%;
-    height: 354px;
-    object-fit: cover;
-    padding: 0;
-  }
-  .box{
-    top: 0;
-    left: 0;
-  }
-  .main-container {
-    transition: margin-right 0.5s;
-  }
-  .card {
-    grid-template-columns: 1fr;
-    max-height: fit-content;
-    margin-bottom: 0.5em;
-  }
-  .card div {
-    order: 1;
-  }
-  .card:nth-child(even) {
-    grid-template-columns: 1fr;
-  }
-  .card h2 {
-    font-size: 28px;
-    font-family: sans-serif;
-  }
-  .card p {
-    line-height: 26px;
-    font-family: sans-serif;
-    font-size: 16px;
-    margin-bottom: 0.8em;
-  }
-  .card img {
-    width: 100%;
-    max-height: 430px;
-    object-fit: cover;
-  }
-  .text {
-    margin: 1em 1.8em;
-    padding: 0em;
   }
   .fcontainer {
+    position: absolute;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: start;
     line-height: 1.2;
     padding-bottom: 2em;
     padding-left: 1em;
-    font-size: smaller;  
+    font-size: smaller;
+  }
+  .fcontainer ul {
+    list-style-type: none;
+    padding-right: 30px;
+  }
+  .one h3,
+  .two h3,
+  .three h3,
+  .social h3 {
+    font-size: 1em;
+    padding-bottom: 0.5em;
+    color: #fff;
+    padding-right: 30px;
   }
   .copy {
     height: 20vh;
     padding: 1em 1%;
     font-size: 11px;
   }
+
 }
 @media (max-width: 568px) {
   .fcontainer {
-    display: grid;
     grid-template-columns: 1fr 1fr;
     padding-left: 2em;
   }
