--- a/about.css
+++ b/about.css
@@ -13,13 +13,15 @@ body {
 .head-container {
   background: #fff;
   border-top: 4px solid #333;
+  /* position: fixed;
+    width: 100%;
+    top: 0%; */
 }
 
 .heading {
   width: 82%;
   margin: auto;
   padding: 2vh;
-  font-family: 'Oswald', sans-serif;
   display: flex;
 }
 .logo {
@@ -50,17 +52,23 @@ body {
 }
 
 .body {
-  padding: 2em 6.5em;
-  line-height: 30px;
-  margin-left: 10%;
-  font-size: 20px;
+  width: 82%;
+  margin: auto;
+  padding: 2em 0em;
+  line-height: 28px;
   font-weight: 100;
   color: #414042;
 }
 .body h2 {
-  color: #caca1e;
+  color: #000;
   padding: 0.5em 0;
   font-size: 26px;
+}
+.body h3{
+  margin-bottom: 0.2em;
+}
+.body h6{
+  margin-left: 90%;
 }
 .body p {
   padding-bottom: 0.5em;
@@ -70,6 +78,8 @@ body {
   font-weight: bold;
 }
 .banner {
+  width: 100%;
+  overflow: hidden;
   background-image: url('./assets/about.jpg');
   height: 66vh;
   background-position: center;
@@ -84,27 +94,33 @@ body {
   left: 9.5%;
   font-weight: bold;
 }
-
+.deal-banner{
+  background-image: url('./assets/about.jpg');
+}
+.nuts-banner{
+  background-image: url(./assets/cashews-ftr.jpg);
+}
 .footer {
+  position: relative; 
+  top: 10vh;
   background: #333;
-  /* position: absolute; */
 }
 
 .fcontainer {
-  padding-left: 45%;
   position: relative;
   width: 100%;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   background-color: #333;
   color: #fff;
-  font-size: 0.9em;
+  justify-content: center;
   justify-items: center;
-  padding-top: 3em;
-  padding-bottom: 4em;
+  padding: 3em 12em 4em 12em;
+  font-size: 0.8em;
 }
 .fcontainer ul {
   list-style-type: none;
-  padding-right: 50px;
+  width: 100%;
 }
 .fcontainer ul li a {
   text-decoration: none;
@@ -133,7 +149,6 @@ body {
   font-size: 1em;
   padding-bottom: 0.5em;
   color: #fff;
-  padding-right: 50px;
 }
 .fcontainer .pad {
   margin-left: 6%;
@@ -151,7 +166,7 @@ body {
   margin: 0;
 }
 .copy {
-  height: 30vh;
+  height: 15vh;
   background: #333;
   color: #fff;
   padding: 2em;
@@ -161,76 +176,67 @@ body {
   width: 85%;
   margin: auto;
 }
-/* .f-logo{
-  width: 200px;
-  margin: 0;
-  padding: 0;
-} */
-/* .footer-logo{
-  padding: 0;
-  margin: 0;
-  color: #fff;
-  position: relative;
-  bottom: -20px;
-  font-size: 30px;
-  left: -500px;
-  z-index: 1;
-} */
-
 /* Media Query *****************************************/
 @media (max-width: 768px) {
-  .line {
-    width: 30px;
-    height: 3px;
-    background: #000;
-    margin: 5px;
+  .head-container {
+    position: unset;
   }
-  .heading {
-    position: relative;
-  }
-  .hamburger {
-    position: absolute;
-    cursor: pointer;
-    left: 100%;
-    top: 50%;
-    transform: translate(-100%, -50%);
-    z-index: 4;
-  }
-  .navbar-nav {
-    display: none;
-  }
-  .side-nav {
-    display: unset;
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 5;
-    top: 0%;
-    right: 0%;
-    background: black;
-    opacity: 0.9;
-    overflow-x: hidden;
-    padding-top: 60px;
-    transition: 0.5s;
-  }
-  .side-nav a {
-    padding: 8px 8px 8px 20px;
-    text-decoration: none;
-    color: white;
-    display: block;
-    transition: 0.3s ease-out;
-    font-size: 14px;
-  }
-  .side-nav a:hover {
-    color: #e6e63e;
-  }
-  .side-nav .btn-close {
-    position: absolute;
-    top: 0;
-    right: 22px;
-    font-size: 30px;
-    margin-left: 50px;
-  }
+.line {
+  width: 30px;
+  height: 3px;
+  background: #000;
+  margin: 5px;
+}
+.heading {
+  position: relative;
+}
+.hamburger {
+  position: absolute;
+  cursor: pointer;
+  left: 100%;
+  top: 50%;
+  transform: translate(-100%, -50%);
+  z-index: 4;
+}
+.navbar-nav {
+  display: none;
+  list-style-type: none;
+}
+.side-nav {
+  display: unset;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 5;
+  top: 0%;
+  right: 0%;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+  background-color: #fff;
+}
+.side-nav li {
+  list-style-type: none;
+}
+.side-nav a {
+  padding: 12px 8px 12px 20px;
+  text-decoration: none;
+  color: #333;
+  display: block;
+  transition: 0.3s ease-out;
+  font-size: 16px;
+  font-weight: bold;
+}
+.side-nav a:hover {
+  color: #e6e63e;
+}
+.side-nav .btn-close {
+  position: absolute;
+  top: 0;
+  right: 22px;
+  font-size: 30px;
+  margin-left: 50px;
+}
   .body {
     padding: 1em 1.2em;
     margin: auto;
@@ -248,49 +254,35 @@ body {
   .body p {
     padding-bottom: 0.5em;
   }
-  .footer{
-    position: absolute;
-    width: 100%;
-  }
+
   .fcontainer {
-    position: absolute;
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    justify-items: start;
+    justify-items: center;
     line-height: 1.2;
-    padding-bottom: 2em;
-    padding-left: 1em;
+    padding: 3em 2em 4em 2em;
     font-size: smaller;
   }
-  .fcontainer ul {
-    list-style-type: none;
-    padding-right: 30px;
-  }
-  .one h3,
-  .two h3,
-  .three h3,
-  .social h3 {
-    font-size: 1em;
-    padding-bottom: 0.5em;
-    color: #fff;
-    padding-right: 30px;
+  .f-imageAndText img {
+    display: none;
   }
   .copy {
-    height: 20vh;
+    height: 10vh;
     padding: 1em 1%;
     font-size: 11px;
   }
-
 }
+
 @media (max-width: 568px) {
   .fcontainer {
+    display: grid;
     grid-template-columns: 1fr 1fr;
-    padding-left: 2em;
+    padding-top:2em;
+    margin: 0;
   }
   .one {
-    padding: 0em 5em 0 0em;
+    padding: 0em 0em 0em 0em;
   }
   .social {
-    padding: 0em oem 0 0em;
+    padding: 0em 1em 0em 0em;
   }
 }
