--- a/contact.css
+++ b/contact.css
@@ -62,7 +62,8 @@ body {
 }
 .explain h1 {
   padding: 0.4em 0 0.6em 0;
-  color: #414042;
+  /* color: #414042; */
+  color:#dbdb0f;
   font-size: 49px;
 }
 .explain p {
@@ -180,7 +181,7 @@ p {
 
 .q-three p,
 .q-two p {
-  color: #e6da3e;
+  color: #dbdb0f;
 }
 .q-two,
 .q-three {
