--- a/about.css
+++ b/about.css
@@ -1,7 +1,6 @@
 body {
   background-color: #fff;
   font-family: 'Open Sans', sans-serif;
-  /* font-family: 'Oswald', sans-serif; */
   font-size: 1em;
   color: #000;
 }
@@ -60,7 +59,7 @@ body {
   color: #414042;
 }
 .body h2 {
-  color: #000;
+  color: #dbdb0f;
   padding: 0.5em 0;
   font-size: 26px;
 }
@@ -97,9 +96,7 @@ body {
 .deal-banner{
   background-image: url('./assets/about.jpg');
 }
-.nuts-banner{
-  background-image: url(./assets/cashews-ftr.jpg);
-}
+
 .footer {
   position: relative; 
   top: 10vh;
@@ -239,10 +236,10 @@ body {
 }
   .body {
     padding: 1em 1.2em;
+    width: 98%;
     margin: auto;
-
-    line-height: 30px;
-    font-size: 18px;
+    line-height: 28px;
+    font-size: 17px;
     font-weight: 100;
     color: #414042;
   }
@@ -278,11 +275,20 @@ body {
     grid-template-columns: 1fr 1fr;
     padding-top:2em;
     margin: 0;
+    justify-items: unset;
   }
   .one {
-    padding: 0em 0em 0em 0em;
+    padding: 0em 0em 0em 1em;
+  }
+  .three{
+    padding: 0em 0 0 1em;
   }
   .social {
     padding: 0em 1em 0em 0em;
+  }
+  .copy{
+    padding: 2em;
+    text-align: unset;
+    width: unset;
   }
 }
