--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
   font-weight: bold;
 }
 .heading ul li a:hover {
-  color: #e6e63e;
+  color: #dbdb0f;
   transition: 0.3s ease-in-out;
 }
 .side-nav {
@@ -94,6 +94,7 @@ body {
 .direction p {
   font-size: 1.2em;
   font-weight: bold;
+  margin-left: 0.3em;
 }
 .bounce {
   position: relative;
@@ -151,7 +152,7 @@ body {
   position: relative;
   top: 40%;
   color: #fff;
-  font-size: 23px;
+  font-size: 20px;
   text-transform: uppercase;
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -169,9 +170,8 @@ body {
   width: 60%;
   margin: auto;
   text-decoration: none;
-  padding: 18px 18px;
+  padding: 10px 18px;
   text-align: center;
-  border-radius: 25px;
   color: #414042;
   border: 1px solid #414042;
 }
@@ -200,6 +200,7 @@ body {
   font-size: 34px;
   margin-bottom: 0.5em;
   font-family: 'Oswald', sans-serif;
+  color: #dbdb0f;
 }
 .card p {
   line-height: 26px;
@@ -212,6 +213,8 @@ body {
   margin-left: 2.2em;
   padding: 0 1.5em;
   font-size: 17px;
+  color: #414042;
+  
 }
 .learn-more {
   font-size: 15px;
@@ -224,7 +227,7 @@ body {
   text-align: center;
   margin: 0;
   font-weight: 700;
-  border-radius: 25px;
+  border-radius: 4px;
 }
 .card:nth-child(even) {
   grid-template-columns: 58.5% 41.5%;
@@ -263,7 +266,7 @@ body {
   line-height: 1.8;
 }
 .fcontainer ul li a:hover {
-  color: #e6e63e;
+  color: #dbdb0f;
 }
 .fcontainer h3,
 .fcontainer p {
@@ -391,15 +394,14 @@ body {
   .direction {
     color: #fff;
     top: 80%;
-    right: 0%;
+    right: 15%;
     cursor: pointer;
   }
   .direction p {
     font-size: 1em;
   }
   .main-container {
-    transition: margin-right 0.5s;
-    width: 90%;
+    width: 95%;
   }
 
   
@@ -419,8 +421,9 @@ body {
   }
   .card {
     grid-template-columns: 1fr;
-    max-height: fit-content;
+    max-height: 650px;
     padding-bottom: 1em;
+    margin-top: 1em;
   }
   .card div {
     order: 1;
@@ -446,7 +449,13 @@ body {
   .text {
     margin: 1em 1.8em;
     padding: 0em;
+    padding-bottom: 0.2em;
     font-size: 1em;
+  }
+  .learn-more {
+    font-size: 14px;
+    width: 40%;
+    padding: 8px 18px;
   }
   .fcontainer {
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -466,19 +475,32 @@ body {
 }
 
 @media (max-width: 568px) {
+  .container{
+    margin-bottom: 8em;
+  }
+  .direction p {
+    margin-left: 1.2em;
+  }
   .fcontainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding-top: 2em;
+    padding: 2em 2em 1em 2.5em;
+    justify-items: unset;
     margin: 0;
   }
   .one {
-    padding: 0em 0em 0em 0em;
+    padding: 0em 0em 0em 1em;
   }
   .social {
     padding: 0em 1em 0em 0em;
   }
-  .container{
-    margin-bottom: 8em;
+  .three{
+    padding: 0em 0 0 1em;
   }
+  .copy{
+    padding: 2em;
+    text-align: unset;
+    width: unset;
+  }
+ 
 }
